4.0
	+ Remove dependency on deprecated webserver module
	+ OpenChange -> Setup menu entry moved to Mail -> OpenChange
	+ Remove currently unused migration code
	+ Set version to 4.0
	+ Use .crt when downloading the certificate for RPC/Proxy
	  to ease Windows importing
	+ Changes to out-of-office required by upstream openchange changes
	+ Notify when OpenChange is using the domain certificate
	+ Migrate RPC Proxy certificate to new use our zentyal-ca
	+ Adapted configuration for making Autodiscover works with Outlook Anywhere
	+ Adapted rcpproxy certificate generation to changes in webadmin certificates
	+ Depends on latest zentyal-samba to make sure openchange.conf
	  is correct
	+ openchange.conf named properties config uses splitted params
	+ Better certificate management for autodiscovery
3.5.1
	+ Fixed issue with Sieve separator parameter at sogo configuration
3.5
	+ Zentyal users removed from "only contacts" addressbook at sogo webUI
	+ Make SOGo shared contacts display their CN
	+ Updated SOGo conf
	+ Added autodiscovery of server parameters
	+ Proxying all Exchange Web Services to OCSManager
	+ Fixed wrong references to nginx error pages on ocsmanager conf
	+ Depend on zentyal-users instead of zentyal-samba
	+ Update sogo.conf to use Samba LDAP
	+ Extracted vdomain selection for outgoing mail to a new configuration
	  model named Configuration
	+ Added noMultipleOUSupportComponent support
	+ Set version to 3.5
	+ Allow openchange working with old ldb/tdb backends (upgrade from 3.3)
	+ Allow ActiveSync setup if z-push or sogo-activesync are installed
	+ Remove Migration menu
3.4.1
	+ Generate master password for IMAP access
3.4
	+ Avoid to mark webadmin as changed
	+ Update nginx template to allow access to /ews/oof
	+ Added UI message with sogo webmail interface location
	+ Sogo webmail shared contacts unified. Contacts working properly
	+ Use the new EBox::Samba::Ldbobject::isCritical method
	+ Contacts are now shown at the webmail interface