@@ -1,0 +1,16 @@
+<%args>
+  $server
+</%args>
+
+<VirtualHost autodiscover.zentyal-domain.lan>
+    SSLEngine on
+    SSLCertificateFile /etc/ocsmanager/domain.pem
+
+    ProxyAddHeaders On
+
+    # ocsmanager autodiscover
+    ProxyPass /autodiscover http://127.0.0.1:5000/autodiscover
+
+    # ocsmanager Exchange Web Services (ews)
+    ProxyPass /ews http://127.0.0.1:5000
+</VirtualHost>
