@@ -1,16 +1,0 @@
-<%args>
-$server
-</%args>
-# ocsmanager autodiscover
-location ~* ^/autodiscover/ {
-       proxy_pass http://127.0.0.1:5000;
-       proxy_set_header  X_FORWARDED_SERVER <% $server %>;
-       error_page 502 /errors/502.html;
-}
-
-# ocsmanager Exchange Web Services (ews)
-location ~* ^/ews/ {
-       proxy_pass http://127.0.0.1:5000;
-       proxy_set_header  X_FORWARDED_SERVER <% $server %>;
-       error_page 502 /errors/502.html;
-}
